option('icons', type: 'boolean', value: true, description:'build icons component')
option('gnome-shell', type: 'boolean', value: true, description:'build gnome-shell component')
option('gnome-shell-gresource', type: 'boolean', value: false, description: 'build gnome-shell component in gresources')
option('gtk', type: 'boolean', value: true, description:'build gtk component')
option('gtksourceview', type: 'boolean', value: true, description:'build gtksourceview component')
option('metacity', type: 'boolean', value: true, description:'build metacity component')
option('sounds', type: 'boolean', value: true, description:'build sounds component')
option('sessions', type: 'boolean', value: true, description:'build sessions component')
option('cinnamon-shell', type: 'boolean', value: false, description:'build cinnamon component')

option('default', type: 'boolean', value: true, description:'build Yaru default flavour')
option('dark', type: 'boolean', value: true, description:'build Yaru dark flavour')
option('mate', type: 'boolean', value: false, description:'build Yaru mate flavour')
option('mate-dark', type: 'boolean', value: false, description:'build Yaru mate-dark flavour')
option('ubuntu-unity', type: 'boolean', value: false, description:'build Yaru with Unity assets')
option('xfwm4', type: 'boolean', value: false, description:'build Yaru with xfwm4 assets')
option('cinnamon', type: 'boolean', value: false, description:'build Yaru with Cinnamon flavour')
option('cinnamon-dark', type: 'boolean', value: false, description:'build Yaru with Cinnamon dark flavour')

#accent-color: aqua
option('aqua', type: 'boolean', value: true, description:'build Yaru with aqua as an accent-color')
option('aqua-dark', type: 'boolean', value: true, description:'build Yaru-dark with aqua as an accent-color')
#accent-color: blue
option('blue', type: 'boolean', value: true, description:'build Yaru with blue as an accent-color')
option('blue-dark', type: 'boolean', value: true, description:'build Yaru-dark with blue as an accent-color')
#accent-color: green
option('green', type: 'boolean', value: true, description:'build Yaru with green as an accent-color')
option('green-dark', type: 'boolean', value: true, description:'build Yaru-dark with green as an accent-color')
#accent-color: pink
option('pink', type: 'boolean', value: true, description:'build Yaru with pink as an accent-color')
option('pink-dark', type: 'boolean', value: true, description:'build Yaru-dark with pink as an accent-color')
#accent-color: purple
option('purple', type: 'boolean', value: true, description:'build Yaru with purple as an accent-color')
option('purple-dark', type: 'boolean', value: true, description:'build Yaru-dark with purple as an accent-color')
#accent-color: red
option('red', type: 'boolean', value: true, description:'build Yaru with red as an accent-color')
option('red-dark', type: 'boolean', value: true, description:'build Yaru-dark with red as an accent-color')
#accent-color: yellow
option('yellow', type: 'boolean', value: true, description:'build Yaru with yellow as an accent-color')
option('yellow-dark', type: 'boolean', value: true, description:'build Yaru-dark with yellow as an accent-color')
