gnomeshell_default_theme_dir = join_paths(get_option('datadir'), 'gnome-shell', 'theme')
gnomeshell_alt_themes_dir = join_paths(get_option('datadir'), 'themes')
gresources_xml_parser = find_program('gresources-xml-parser.py')
gnomeshell_copy_and_rename = find_program('copy-and-rename.py')

subdir('src')
